// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories reducer Categories FETCH_CATEGORIES_SUCCESS action 1`] = `
Object {
  "categories": Object {
    "drinks": Array [
      Object {
        "strCategory": "Ordinary Drink",
      },
    ],
  },
}
`;

exports[`Categories reducer Categories should return the initial state 1`] = `
Object {
  "categories": Array [],
  "error": "",
  "loading": false,
}
`;

exports[`Categories reducer should match FETCH_CATEGORIES_FAILURE action 1`] = `
Object {
  "0": Object {
    "categories": Array [],
    "error": "",
    "loading": false,
  },
  "error": undefined,
}
`;
